Fix height issue on mobile devices

--- a/src/modules/game/app/app.css
+++ b/src/modules/game/app/app.css
@@ -7,6 +7,7 @@
     align-items: center;
     font-size: 7.5vmin;
     height: 100%;
+    overflow: hidden;
 }
 
 .scoreboard {
